kudo-kafka-app/kafka-app-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-app-ui-svc
spec:
  selector:
    app: kafka-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: kafka-app-ui-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kafka-app-ui-svc
          servicePort: 80
