kudo-kafka-app/kafka-client-api-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-client-api-svc
spec:
  selector:
    app: kafka-client-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: kafka-client-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /kafka-client-api
        backend:
          serviceName: kafka-client-api-svc
          servicePort: 80
